# RTL-Pilot

./: PROJECT_STATUS.md  PROJECT_STATUS_CURRENT.md  QUICKSTART.md  README.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_basic.py  test_langchain_integration.py
.github/workflows/: ci.yml
examples/adder/: README.md  config.yaml
examples/adder/src/: simple_adder.v
examples/adder/tb/: tb_simple_adder.sv
examples/fifo/: README.md  config.yaml
examples/fifo/src/: sync_fifo.v
examples/fifo/tb/: tb_sync_fifo.sv
rtl_pilot/: __init__.py
rtl_pilot/agents/: __init__.py  evaluation.py  planner.py  sim_runner.py  testbench_gen.py
rtl_pilot/config/: __init__.py  schema.py  settings.py
rtl_pilot/interface/: __init__.py  cli.py  web_ui.py
rtl_pilot/llm/: __init__.py  agent.py  base.py  providers.py  tools.py
rtl_pilot/prompts/: feedback_loop.jinja2  verilog_tb.jinja2
rtl_pilot/scripts/: vivado_run.tcl
rtl_pilot/utils/: __init__.py  file_ops.py  vivado_interface.py
rtl_pilot/workflows/: __init__.py  default_flow.py
tests/: __init__.py  fixtures.py  test_config.py  test_evaluation.py  test_integration.py  test_planner.py  test_sim_runner.py  test_tb_generation.py  test_tb_generation_simple.py  test_utils.py
